js/js.translator/testData/incremental/invalidation/fakeOverrideInheritance/lib1/A.1.kt
abstract class AbstractClassA {
    inline fun funA() = "a-1"
}
